make about me page structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="menuBar">
         <ul class="menu">
           <li><a href="">Home</a></li>
-          <li><a href="">About Me</a></li>
+          <li><a href="#aboutMe">About Me</a></li>
           <li><a href="">My Projects</a></li>
           <li><a href="">Contact Me</a></li>
           <li>
@@ -59,6 +59,24 @@
           <img src="img/main circle.svg" alt="" id="firCircle" />
           <img src="img/man.svg" alt="" id="man" />
         </div>
+      </div>
+    </div>
+    <div class="aboutMe" id="aboutMe">
+      <div class="aboutLeft">
+        <div class="aboutImg">
+          <img src="img/second rec.svg" alt="" id="secRec" />
+          <img src="img/first rec.svg" alt="" id="firRec" />
+          <img src="img/me.svg" alt="" id="myImg" />
+        </div>
+      </div>
+      <div class="aboutRight">
+        <h3>About Me</h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to
+        </p>
       </div>
     </div>
   </body>
