fix bugs in about me page structure

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     </div>
     <div class="homeContainor">
       <div class="homeLeft">
-        <!-- <img src="img/sign.svg" alt="" /> -->
         <div class="homeContent">
           <p id="hp1">HEY THERE !</p>
           <p id="hp2">I am,</p>
@@ -77,6 +76,30 @@
           since the 1500s, when an unknown printer took a galley of type and
           scrambled it to
         </p>
+      </div>
+    </div>
+    <div class="contactMe" id="contactMe">
+      <div class="contactLeft">
+        <h2>Contact Me</h2>
+        <div class="socialMeadia">
+          <a href=""><img src="img/icons/fb.svg" alt="" /></a>
+          <a href=""><img src="img/icons/whatsapp.svg" alt="" /></a>
+          <a href=""><img src="img/icons/linkdin.svg" alt="" /></a>
+          <a href=""><img src="img/icons/twiter.svg" alt="" /></a>
+        </div>
+        <div class="conImg">
+          <img src="img/contactimg.svg" alt="" id="contactImg" />
+        </div>
+      </div>
+      <div class="contactRight">
+        <form action="">
+          <strong>name</strong> <br />
+          <input type="text" /><br />
+          <strong>email address</strong><br />
+          <input type="email" name="" id="" /><br />
+          <strong>Message</strong><br />
+          <input type="text" />
+        </form>
       </div>
     </div>
   </body>
