make contact me containor structure

--- a/index.html
+++ b/index.html
@@ -80,12 +80,14 @@
     </div>
     <div class="contactMe" id="contactMe">
       <div class="contactLeft">
-        <h2>Contact Me</h2>
-        <div class="socialMeadia">
-          <a href=""><img src="img/icons/fb.svg" alt="" /></a>
-          <a href=""><img src="img/icons/whatsapp.svg" alt="" /></a>
-          <a href=""><img src="img/icons/linkdin.svg" alt="" /></a>
-          <a href=""><img src="img/icons/twiter.svg" alt="" /></a>
+        <div class="textIcon">
+          <h2>Contact Me</h2>
+          <div class="socialMeadia">
+            <a href=""><img src="img/icons/fb.svg" alt="" /></a>
+            <a href=""><img src="img/icons/whatsapp.svg" alt="" /></a>
+            <a href=""><img src="img/icons/linkdin.svg" alt="" /></a>
+            <a href=""><img src="img/icons/twiter.svg" alt="" /></a>
+          </div>
         </div>
         <div class="conImg">
           <img src="img/contactimg.svg" alt="" id="contactImg" />
@@ -93,12 +95,13 @@
       </div>
       <div class="contactRight">
         <form action="">
-          <strong>name</strong> <br />
+          <label for="name">Name</label> <br />
           <input type="text" /><br />
-          <strong>email address</strong><br />
+          <label for="name">Email Address</label> <br />
           <input type="email" name="" id="" /><br />
-          <strong>Message</strong><br />
-          <input type="text" />
+          <label for="name">Message</label> <br />
+          <textarea name="message" id="" cols="30" rows="15%"></textarea><br />
+          <input type="submit" value="Send" />
         </form>
       </div>
     </div>
