--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="menuBar">
         <ul class="menu">
-          <li><a href="#homeContainor">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#aboutMe">About Me</a></li>
           <li><a href="">My Projects</a></li>
           <li><a href="#contactMe">Contact Me</a></li>
