find way to change scale on scrolling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="navContainor">
       <div class="logo">
-        <a href=""><img src="img/sign.svg" alt="logo" /></a>
+        <a href=""><img id="sign" src="img/sign.svg" alt="logo" /></a>
       </div>
       <div class="menuBar">
         <ul class="menu">
@@ -110,4 +110,5 @@
       </div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
